--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cozza Brisket Backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "flow-remove-types --pretty src/ --out-dir build/",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
