--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
   "bugs": {
     "url": "https://github.com/joeycozza/nodeBrisket/issues"
   },
-  "homepage": "https://github.com/joeycozza/nodeBrisket#readme"
+  "homepage": "https://github.com/joeycozza/nodeBrisket#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "lodash": "^4.17.4",
+    "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.37.4"
+  }
 }
